@@ -9,8 +9,6 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
-
 import static org.snomed.snowstorm.core.util.CollectionUtils.orEmpty;
 
 public class FHIRValueSetCriteria {
@@ -55,7 +53,7 @@ public class FHIRValueSetCriteria {
 			}
 			filter.add(new FHIRValueSetFilter(hapiFilter));
 		}
-		valueSet = hapiCriteria.getValueSet().stream().map(CanonicalType::getValueAsString).collect(Collectors.toList());
+		valueSet = hapiCriteria.getValueSet().stream().map(CanonicalType::getValueAsString).toList();
 	}
 
 	public ValueSet.ConceptSetComponent getHapi() {
@@ -65,18 +63,20 @@ public class FHIRValueSetCriteria {
 		for (String code : orEmpty(codes)) {
 			ValueSet.ConceptReferenceComponent component = new ValueSet.ConceptReferenceComponent();
 			component.setCode(code);
-			conceptReferences.stream().filter(x -> code.equals(x.getCode()))
-					.forEach(x -> {
-						Optional.ofNullable(x.getExtensions()).orElse(Collections.emptyList()).forEach(ext ->component.addExtension(ext.getHapi()));
-						Optional.ofNullable(x.getDesignations()).orElse(Collections.emptyList()).forEach(d ->component.addDesignation(d.getHapi()));
-					}
-				);
+			if (conceptReferences != null) {
+				conceptReferences.stream().filter(x -> code.equals(x.getCode()))
+						.forEach(x -> {
+									Optional.ofNullable(x.getExtensions()).orElse(Collections.emptyList()).forEach(ext -> component.addExtension(ext.getHapi()));
+									Optional.ofNullable(x.getDesignations()).orElse(Collections.emptyList()).forEach(d -> component.addDesignation(d.getHapi()));
+								}
+						);
+			}
 			hapiConceptSet.addConcept(component);
 		}
-		for (FHIRValueSetFilter filter : orEmpty(getFilter())) {
-			hapiConceptSet.addFilter(filter.getHapi());
+		for (FHIRValueSetFilter vsFilter : orEmpty(getFilter())) {
+			hapiConceptSet.addFilter(vsFilter.getHapi());
 		}
-		hapiConceptSet.setValueSet(orEmpty(valueSet).stream().map(CanonicalType::new).collect(Collectors.toList()));
+		hapiConceptSet.setValueSet(orEmpty(valueSet).stream().map(CanonicalType::new).toList());
 		return hapiConceptSet;
 	}
 
