@@ -5,8 +5,6 @@ import ca.uhn.fhir.jpa.entity.TermConcept;
 import co.elastic.clients.elasticsearch._types.query_dsl.BoolQuery;
 import co.elastic.clients.elasticsearch._types.query_dsl.TermQuery;
 import com.google.common.collect.Iterables;
-
-import org.hl7.fhir.r4.model.BooleanType;
 import org.hl7.fhir.r4.model.CodeSystem;
 import org.hl7.fhir.r4.model.CodeType;
 import org.slf4j.Logger;
@@ -17,14 +15,14 @@ import org.snomed.snowstorm.fhir.domain.FHIRCodeSystemVersion;
 import org.snomed.snowstorm.fhir.domain.FHIRConcept;
 import org.snomed.snowstorm.fhir.domain.FHIRProperty;
 import org.snomed.snowstorm.fhir.repositories.FHIRConceptRepository;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.elasticsearch.core.ElasticsearchOperations;
-import org.springframework.data.elasticsearch.core.SearchHits;
+import org.springframework.data.domain.Sort;
 import org.springframework.data.elasticsearch.client.elc.NativeQuery;
 import org.springframework.data.elasticsearch.client.elc.NativeQueryBuilder;
+import org.springframework.data.elasticsearch.core.ElasticsearchOperations;
+import org.springframework.data.elasticsearch.core.SearchHits;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
@@ -42,13 +40,16 @@ public class FHIRConceptService {
 	public static final String PARENT = "parent";
 	public static final String CHILD = "child";
 
-	@Autowired
-	private FHIRConceptRepository conceptRepository;
+	private final FHIRConceptRepository conceptRepository;
 
-	@Autowired
-	private ElasticsearchOperations elasticsearchOperations;
+	private final ElasticsearchOperations elasticsearchOperations;
 
 	private final Logger logger = LoggerFactory.getLogger(getClass());
+
+	public FHIRConceptService(FHIRConceptRepository conceptRepository, ElasticsearchOperations elasticsearchOperations) {
+		this.conceptRepository = conceptRepository;
+		this.elasticsearchOperations = elasticsearchOperations;
+	}
 
 	public void saveAllConceptsOfCodeSystemVersion(TermCodeSystemVersion termCodeSystemVersion, FHIRCodeSystemVersion codeSystemVersion) {
 
@@ -63,7 +64,7 @@ public class FHIRConceptService {
 
 		Collection<FHIRConcept> concepts = allTermConcepts.stream()
 				.map(termConcept -> new FHIRConcept(termConcept, codeSystemVersion))
-				.collect(Collectors.toList());
+				.toList();
 
 		saveAllConceptsOfCodeSystemVersion(codeSystemVersion, codeSystemVersion.getId(), concepts);
 	}
@@ -77,15 +78,15 @@ public class FHIRConceptService {
 
 		List<FHIRConcept> concepts = allConcepts.stream()
 				.map(definitionConcept -> new FHIRConcept(definitionConcept, codeSystemVersion))
-				.collect(Collectors.toList());
+				.toList();
 		saveAllConceptsOfCodeSystemVersion(codeSystemVersion, codeSystemVersion.getId(), concepts);
 	}
 
 	private void collectChildren(CodeSystem.ConceptDefinitionComponent parent, Set<CodeSystem.ConceptDefinitionComponent> allConcepts) {
 		allConcepts.add(parent);
 		for (CodeSystem.ConceptDefinitionComponent child : orEmpty(parent.getConcept())) {
-			parent.addProperty(new CodeSystem.ConceptPropertyComponent(new CodeType("child"), new CodeType(child.getCode())));
-			child.addProperty(new CodeSystem.ConceptPropertyComponent(new CodeType("parent"), new CodeType(parent.getCode())));
+			parent.addProperty(new CodeSystem.ConceptPropertyComponent(new CodeType(CHILD), new CodeType(child.getCode())));
+			child.addProperty(new CodeSystem.ConceptPropertyComponent(new CodeType(PARENT), new CodeType(parent.getCode())));
 			collectChildren(child, allConcepts);
 		}
 	}
@@ -99,44 +100,50 @@ public class FHIRConceptService {
 
 		FHIRGraphBuilder graphBuilder = new FHIRGraphBuilder();
 		if (Objects.isNull(codeSystemVersion.getHierarchyMeaning()) || "is-a".equals(codeSystemVersion.getHierarchyMeaning())) {
-			// Record transitive closure of concepts for subsumption testing
-			for (FHIRConcept concept : concepts) {
-				for (String parentCode : concept.getParents()) {
-					graphBuilder.addParent(concept.getCode(), parentCode);
-				}
-			}
-			// Add parent and child properties if missing
-			Map<String, String> conceptDisplayMap = concepts.stream()
-					.filter(concept -> concept.getDisplay() != null)
-					.collect(Collectors.toMap(FHIRConcept::getCode, FHIRConcept::getDisplay));
-			for (FHIRConcept concept : concepts) {
-				Map<String, List<FHIRProperty>> properties = concept.getProperties();
-				Collection<String> parents = graphBuilder.getNodeParents(concept.getCode());
-				if (!properties.containsKey(PARENT)) {
-					properties.put(PARENT, parents.stream().map(parent -> new FHIRProperty(PARENT, conceptDisplayMap.get(parent), parent, "CODING"))
-							.collect(Collectors.toList()));
-				}
-				Collection<String> children = graphBuilder.getNodeChildren(concept.getCode());
-				if (!properties.containsKey(CHILD)) {
-					properties.put(CHILD, children.stream().map(child -> new FHIRProperty(CHILD, conceptDisplayMap.get(child), child, "CODING"))
-							.collect(Collectors.toList()));
-				}
-			}
+			buildHierarchyGraphAndProperties(concepts, graphBuilder);
 		}
 
 		Set<String> props = new HashSet<>();
 		//treat extensions as properties, until better solution...
-		concepts.forEach(concept ->{
-			concept.getExtensions().forEach((key,value)->{
-				concept.getProperties().put(key,value);
-			});
-		});
+		concepts.forEach(concept ->
+			concept.getExtensions().forEach((key,value)->
+				concept.getProperties().put(key,value)));
 
 		concepts.stream()
 				.filter(concept -> concept.getProperties() != null)
 				.forEach(concept -> props.addAll(concept.getProperties().keySet()));
 
 		logger.info("Saving {} '{}' fhir concepts. All properties: {}", concepts.size(), idWithVersion, props);
+		saveConceptsInBatches(concepts, graphBuilder, idWithVersion);
+	}
+
+	private void buildHierarchyGraphAndProperties(Collection<FHIRConcept> concepts, FHIRGraphBuilder graphBuilder) {
+		// Record transitive closure of concepts for subsumption testing
+		for (FHIRConcept concept : concepts) {
+			for (String parentCode : concept.getParents()) {
+				graphBuilder.addParent(concept.getCode(), parentCode);
+			}
+		}
+		// Add parent and child properties if missing
+		Map<String, String> conceptDisplayMap = concepts.stream()
+				.filter(concept -> concept.getDisplay() != null)
+				.collect(Collectors.toMap(FHIRConcept::getCode, FHIRConcept::getDisplay));
+		for (FHIRConcept concept : concepts) {
+			Map<String, List<FHIRProperty>> properties = concept.getProperties();
+
+			Collection<String> parents = graphBuilder.getNodeParents(concept.getCode());
+			properties.computeIfAbsent(PARENT, k -> parents.stream()
+				.map(parent -> new FHIRProperty(PARENT, conceptDisplayMap.get(parent), parent, "CODING"))
+				.toList());
+
+			Collection<String> children = graphBuilder.getNodeChildren(concept.getCode());
+			properties.computeIfAbsent(CHILD, k -> children.stream()
+				.map(child -> new FHIRProperty(CHILD, conceptDisplayMap.get(child), child, "CODING"))
+				.toList());
+		}
+	}
+
+	private void saveConceptsInBatches(Collection<FHIRConcept> concepts, FHIRGraphBuilder graphBuilder, String idWithVersion) {
 		float allSize = concepts.size();
 		int tenPercent = concepts.size() / 10;
 		if (tenPercent == 0) {
@@ -171,11 +178,11 @@ public class FHIRConceptService {
 		Page<FHIRConcept> existingConcepts = conceptRepository.findByCodeSystemVersion(idWithVersion, PageRequest.of(0, 1));
 		long totalExisting = existingConcepts.getTotalElements();
 		if (totalExisting > 0) {
-			logger.info("Deleting {} existing concepts for this code system version {}", totalExisting, idWithVersion);
+			logger.info("Deleting {} existing concepts for code system version: {}", totalExisting, idWithVersion);
 			// Deleting by query often seems to exceed the default 30 second query timeout so we will page through them...
 			Page<FHIRConcept> codesToDelete = conceptRepository.findByCodeSystemVersion(idWithVersion, PageRequest.of(0, DELETE_BATCH_SIZE));
 			while (!codesToDelete.isEmpty()) {
-				conceptRepository.deleteByCodeSystemVersionAndCodeIn(idWithVersion, codesToDelete.getContent().stream().map(FHIRConcept::getCode).collect(Collectors.toList()));
+				conceptRepository.deleteByCodeSystemVersionAndCodeIn(idWithVersion, codesToDelete.getContent().stream().map(FHIRConcept::getCode).toList());
 				codesToDelete = conceptRepository.findByCodeSystemVersion(idWithVersion, PageRequest.of(0, DELETE_BATCH_SIZE));
 			}
 		}
@@ -195,20 +202,19 @@ public class FHIRConceptService {
 	public Page<FHIRConcept> findConcepts(BoolQuery.Builder fhirConceptQuery, PageRequest pageRequest) {
 		NativeQuery searchQuery = new NativeQueryBuilder()
 				.withQuery(fhirConceptQuery.build()._toQuery())
+				.withSort(Sort.by(FHIRConcept.Fields.DISPLAY_LENGTH, FHIRConcept.Fields.CODE))
 				.withPageable(pageRequest)
 				.build();
 		searchQuery.setTrackTotalHits(true);
 		updateQueryWithSearchAfter(searchQuery, pageRequest);
-
-		logger.debug("QUERY:"+searchQuery.getQuery().toString());
-
+		logger.info("QUERY: {}", searchQuery.getQuery());
 		return toPage(elasticsearchOperations.search(searchQuery, FHIRConcept.class), pageRequest);
-
 	}
 
-	public SearchAfterPage<String> findConceptCodes(BoolQuery.Builder fhirConceptQuery, PageRequest pageRequest) {
+	public SearchAfterPage<String> findConceptCodes(BoolQuery fhirConceptQuery, PageRequest pageRequest) {
 		NativeQuery searchQuery = new NativeQueryBuilder()
-				.withQuery(fhirConceptQuery.build()._toQuery())
+				.withQuery(fhirConceptQuery._toQuery())
+				.withSort(Sort.by(FHIRConcept.Fields.CODE))
 				.withPageable(pageRequest)
 				.build();
 		searchQuery.setTrackTotalHits(true);
