@@ -7,7 +7,6 @@ import org.snomed.snowstorm.core.data.domain.QueryConcept;
 import org.snomed.snowstorm.fhir.domain.FHIRCodeSystemVersion;
 import org.snomed.snowstorm.fhir.domain.FHIRConcept;
 import org.snomed.snowstorm.fhir.domain.FHIRGraphNode;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.elasticsearch.core.ElasticsearchOperations;
 import org.springframework.data.elasticsearch.client.elc.NativeQuery;
@@ -15,8 +14,6 @@ import org.springframework.data.elasticsearch.client.elc.NativeQueryBuilder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
 import static co.elastic.clients.elasticsearch._types.query_dsl.QueryBuilders.bool;
 import static io.kaicode.elasticvc.helper.QueryHelper.termQuery;
 
@@ -29,11 +26,14 @@ public class FHIRGraphService {
 	private static final String PARENTS = "parents";
 	private static final String ANCESTORS = "ancestors";
 
-	@Autowired
-	private VersionControlHelper snomedVersionControlHelper;
+	private final VersionControlHelper snomedVersionControlHelper;
 
-	@Autowired
-	private ElasticsearchOperations elasticsearchOperations;
+	private final ElasticsearchOperations elasticsearchOperations;
+
+	public FHIRGraphService(VersionControlHelper snomedVersionControlHelper, ElasticsearchOperations elasticsearchOperations) {
+		this.snomedVersionControlHelper = snomedVersionControlHelper;
+		this.elasticsearchOperations = elasticsearchOperations;
+	}
 
 	/**
 	 * Returns true if codeA is an ancestor of codeB
@@ -53,7 +53,7 @@ public class FHIRGraphService {
 				.must(termQuery(PARENTS, code));
 
 		return elasticsearchOperations.search(graphCriteria.getQuery(), graphCriteria.nodeClass())
-				.get().map(hit -> hit.getContent().getCode()).collect(Collectors.toList());
+				.get().map(hit -> hit.getContent().getCode()).toList();
 	}
 
 	private GraphCriteria getGraphCriteria(FHIRCodeSystemVersion codeSystemVersion, PageRequest page) {
