@@ -18,18 +18,22 @@ import org.slf4j.LoggerFactory;
 import org.snomed.snowstorm.fhir.config.FHIRConstants;
 import org.snomed.snowstorm.fhir.domain.FHIRValueSet;
 import org.snomed.snowstorm.fhir.domain.SearchFilter;
+import org.snomed.snowstorm.fhir.pojo.FHIRCodeValidationRequest;
 import org.snomed.snowstorm.fhir.pojo.ValueSetExpansionParameters;
 import org.snomed.snowstorm.fhir.repositories.FHIRValueSetRepository;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Component;
 import org.springframework.web.bind.annotation.RequestMethod;
 
+import org.snomed.snowstorm.fhir.pojo.CanonicalUri;
+
+import org.hl7.fhir.instance.model.api.IBase;
+
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.Set;
 import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
 
@@ -38,25 +42,30 @@ import static org.snomed.snowstorm.fhir.services.FHIRHelper.exception;
 @Component
 public class FHIRValueSetProvider implements IResourceProvider, FHIRConstants {
 
+	private static final String RESOURCE_TYPE_VALUE_SET = "ValueSet";
+
 	private final Logger logger = LoggerFactory.getLogger(getClass());
 
 	@Value("${snowstorm.rest-api.readonly}")
 	private boolean readOnlyMode;
 
-	@Autowired
-	private FHIRLoadPackageService loadPackageService;
+	private final FHIRValueSetRepository valuesetRepository;
 
-	@Autowired
-	private FHIRValueSetRepository valuesetRepository;
+	private final FHIRValueSetService valueSetService;
 
-	@Autowired
-	private FHIRValueSetService valueSetService;
+	private final FHIRValueSetFinderService valueSetFinderService;
 
-	@Autowired
-	private FhirContext fhirContext;
+	private final FhirContext fhirContext;
 
-	@Autowired
-	private FHIRHelper fhirHelper;
+	private final FHIRHelper fhirHelper;
+
+	public FHIRValueSetProvider(FHIRValueSetRepository valuesetRepository, FHIRValueSetService valueSetService, FHIRValueSetFinderService valueSetFinderService, FhirContext fhirContext, FHIRHelper fhirHelper) {
+		this.valuesetRepository = valuesetRepository;
+		this.valueSetService = valueSetService;
+		this.valueSetFinderService = valueSetFinderService;
+		this.fhirContext = fhirContext;
+		this.fhirHelper = fhirHelper;
+	}
 
 	@Read
 	public ValueSet getValueSet(@IdParam IdType id) {
@@ -69,7 +78,7 @@ public class FHIRValueSetProvider implements IResourceProvider, FHIRConstants {
 		FHIRHelper.readOnlyCheck(readOnlyMode);
 		MethodOutcome outcome = new MethodOutcome();
 		FHIRValueSet savedVs = valueSetService.createOrUpdateValueset(vs);
-		outcome.setId(new IdType("ValueSet", savedVs.getId(), vs.getVersion()));
+		outcome.setId(new IdType(RESOURCE_TYPE_VALUE_SET, savedVs.getId(), vs.getVersion()));
 		return outcome;
 	}
 
@@ -93,13 +102,13 @@ public class FHIRValueSetProvider implements IResourceProvider, FHIRConstants {
 		MethodOutcome outcome = new MethodOutcome();
 		if (id != null) {
 			valuesetRepository.deleteById(id.getIdPart());
-			outcome.setId(new IdType("ValueSet", id.getIdPart()));
+			outcome.setId(new IdType(RESOURCE_TYPE_VALUE_SET, id.getIdPart()));
 		} else {
 			FHIRHelper.required("url", url);
 			FHIRHelper.required("version", version);
-			valueSetService.find(url.getValueAsString(), version).ifPresent(vs -> {
+			valueSetFinderService.find(url.getValueAsString(), version).ifPresent(vs -> {
 				valuesetRepository.deleteById(vs.getId());
-				outcome.setId(new IdType("ValueSet", vs.getId(), version));
+				outcome.setId(new IdType(RESOURCE_TYPE_VALUE_SET, vs.getId(), version));
 			});
 		}
 		return outcome;
@@ -175,11 +184,11 @@ public class FHIRValueSetProvider implements IResourceProvider, FHIRConstants {
 				.map(vs -> {
 					vs.setCompose(null);// Remove compose element from ValueSet search/listing
 					Bundle.BundleEntryComponent component = new Bundle.BundleEntryComponent();
-					component.setFullUrl(vs.getIdElement().withServerBase(fhirServerBase, "ValueSet").getValue());
+					component.setFullUrl(vs.getIdElement().withServerBase(fhirServerBase, RESOURCE_TYPE_VALUE_SET).getValue());
 					component.setResource(vs);
 					return component;
 				})
-				.collect(Collectors.toList()));
+				.toList());
 		return bundle;
 	}
 
@@ -206,9 +215,9 @@ public class FHIRValueSetProvider implements IResourceProvider, FHIRConstants {
 			@OperationParam(name="excludePostCoordinated") BooleanType excludePostCoordinated,
 			@OperationParam(name="displayLanguage") String displayLanguage,
 			@OperationParam(name="exclude-system") StringType excludeSystem,
-			@OperationParam(name="system-version") StringType systemVersion,
-			@OperationParam(name="check-system-version") StringType checkSystemVersion,
-			@OperationParam(name="force-system-version") StringType forceSystemVersion,
+			@OperationParam(name="system-version") CanonicalType systemVersion,
+			@OperationParam(name="check-system-version") CanonicalType checkSystemVersion,
+			@OperationParam(name="force-system-version") CanonicalType forceSystemVersion,
 			@OperationParam(name="version") StringType version,
 			@OperationParam(name="property") CodeType property,
 			@OperationParam(name = "default-valueset-version") CanonicalType versionValueSet)// Invalid parameter
@@ -217,7 +226,8 @@ public class FHIRValueSetProvider implements IResourceProvider, FHIRConstants {
 		ValueSetExpansionParameters params;
 		if (request.getMethod().equals(RequestMethod.POST.name())) {
 			// HAPI doesn't populate the OperationParam values for POST, we parse the body instead.
-			params = FHIRValueSetProviderHelper.getValueSetExpansionParameters(id, fhirContext.newJsonParser().parseResource(Parameters.class, rawBody).getParameter());
+			Parameters postParams = fhirContext.newJsonParser().parseResource(Parameters.class, rawBody);
+			params = FHIRValueSetProviderHelper.getValueSetExpansionParameters(id, postParams.getParameter());
 		} else {
 			params = FHIRValueSetProviderHelper.getValueSetExpansionParameters(id, url, valueSetVersion, context, contextDirection, filter, date, offset, count,
 					includeDesignationsType, designations, includeDefinition, activeType, excludeNested, excludeNotForUI, excludePostCoordinated, displayLanguage,
@@ -248,27 +258,32 @@ public class FHIRValueSetProvider implements IResourceProvider, FHIRConstants {
 			@OperationParam(name="excludePostCoordinated") BooleanType excludePostCoordinated,
 			@OperationParam(name="displayLanguage") String displayLanguage,
 			@OperationParam(name="exclude-system") StringType excludeSystem,
-			@OperationParam(name="system-version") StringType systemVersion,
-			@OperationParam(name="check-system-version") StringType checkSystemVersion,
-			@OperationParam(name="force-system-version") StringType forceSystemVersion,
+			@OperationParam(name="system-version") CanonicalType systemVersion,
+			@OperationParam(name="check-system-version") CanonicalType checkSystemVersion,
+			@OperationParam(name="force-system-version") CanonicalType forceSystemVersion,
 			@OperationParam(name="version") StringType version,// Invalid parameter
 			@OperationParam(name="property") CodeType property,
 			@OperationParam(name="default-valueset-version") CanonicalType versionValueSet)
 			{
-		logger.info(FHIRValueSetProviderHelper.getFullURL(request));
+		if (logger.isInfoEnabled()) {
+			logger.info(FHIRValueSetProviderHelper.getFullURL(request));
+		}
 		ValueSetExpansionParameters params;
 		if (request.getMethod().equals(RequestMethod.POST.name())) {
 			// HAPI doesn't populate the OperationParam values for POST, we parse the body instead.
 			List<Parameters.ParametersParameterComponent> parsed = fhirContext.newJsonParser().parseResource(Parameters.class, rawBody).getParameter();
-			FHIRHelper.handleTxResources(loadPackageService,parsed);
-			params = FHIRValueSetProviderHelper.getValueSetExpansionParameters(null, parsed );
+			TxResourceContext.set(FHIRHelper.extractTxResources(parsed));
+			params = FHIRValueSetProviderHelper.getValueSetExpansionParameters(null, parsed);
 		} else {
 			params = FHIRValueSetProviderHelper.getValueSetExpansionParameters(null, url, valueSetVersion, context, contextDirection, filter, date, offset, count,
 					includeDesignationsType, designations, includeDefinition, activeType, excludeNested, excludeNotForUI, excludePostCoordinated, displayLanguage,
 					excludeSystem, systemVersion, checkSystemVersion, forceSystemVersion, version, property, versionValueSet);
 		}
-
-		return valueSetService.expand(params,  request.getHeader(ACCEPT_LANGUAGE_HEADER));
+		try {
+			return valueSetService.expand(params, request.getHeader(ACCEPT_LANGUAGE_HEADER));
+		} finally {
+			TxResourceContext.clear();
+		}
 	}
 
 	@Operation(name="$validate-code", idempotent=true)
@@ -290,13 +305,39 @@ public class FHIRValueSetProvider implements IResourceProvider, FHIRConstants {
 			@OperationParam(name="abstract") BooleanType abstractBool,
 			@OperationParam(name="displayLanguage") String displayLanguage,
 			@OperationParam(name="system-version") String systemVersionDeprecated,
+			@OperationParam(name="force-system-version") String forceSystemVersionStr,
+			@OperationParam(name="check-system-version") String checkSystemVersionStr,
 			@OperationParam(name="inferSystem") BooleanType inferSystem,
 			@OperationParam(name="lenient-display-validation") BooleanType lenientDisplayValidation,
 			@OperationParam(name="valueset-membership-only") BooleanType valueSetMembershipOnly,
 			@OperationParam(name="activeOnly") BooleanType activeOnly) {
 
-		return valueSetService.validateCode(id.getIdPart(), url, context, valueSet, valueSetVersion, code, system, systemVersion == null ? systemVersionDeprecated : systemVersion, display, coding, codeableConcept, date, abstractBool,
-				FHIRHelper.getDisplayLanguage(displayLanguage, request.getHeader(ACCEPT_LANGUAGE_HEADER)),inferSystem, activeOnly, null, lenientDisplayValidation, valueSetMembershipOnly);
+		// system-version canonical hints (system|version) for resolving versionless includes
+		Set<CanonicalUri> defaultSystemVersions = systemVersionDeprecated != null
+				? Set.of(CanonicalUri.fromString(systemVersionDeprecated)) : null;
+		FHIRCodeValidationRequest codeValidationRequest = new FHIRCodeValidationRequest()
+			.withId(id == null ? null : id.getIdPart())
+			.withUrl(url)
+			.withContext(context)
+			.withValueSet(valueSet)
+			.withValueSetVersion(valueSetVersion)
+			.withCode(code)
+			.withSystem(system)
+			.withSystemVersion(systemVersion)
+			.withDefaultSystemVersions(defaultSystemVersions)
+			.withForceSystemVersion(forceSystemVersionStr != null ? CanonicalUri.fromString(forceSystemVersionStr) : null)
+			.withCheckSystemVersion(checkSystemVersionStr != null ? CanonicalUri.fromString(checkSystemVersionStr) : null)
+			.withDisplay(display)
+			.withCoding(coding)
+			.withCodeableConcept(codeableConcept)
+			.withDate(date)
+			.withAbstractBool(abstractBool)
+			.withDisplayLanguage(FHIRHelper.getDisplayLanguage(displayLanguage, request.getHeader(ACCEPT_LANGUAGE_HEADER)))
+			.withInferSystem(inferSystem)
+			.withActiveOnly(activeOnly)
+			.withLenientDisplayValidation(lenientDisplayValidation)
+			.withValueSetMembershipOnly(valueSetMembershipOnly);
+		return valueSetService.validateCode(codeValidationRequest);
 	}
 
 	@Operation(name="$validate-code", idempotent=true)
@@ -318,20 +359,133 @@ public class FHIRValueSetProvider implements IResourceProvider, FHIRConstants {
 			@OperationParam(name="abstract") BooleanType abstractBool,
 			@OperationParam(name="displayLanguage") String displayLanguage,
 			@OperationParam(name="system-version") String systemVersionDeprecated,
+			@OperationParam(name="force-system-version") String forceSystemVersionStr,
+			@OperationParam(name="check-system-version") String checkSystemVersionStr,
 			@OperationParam(name="inferSystem") BooleanType inferSystem,
 			@OperationParam(name="activeOnly") BooleanType activeOnly,
 			@OperationParam(name="lenient-display-validation") BooleanType lenientDisplayValidation,
 			@OperationParam(name="valueset-membership-only") BooleanType valueSetMembershipOnly,
 			@OperationParam(name="default-valueset-version") CanonicalType versionValueSet) {
 
-		logger.info(FHIRValueSetProviderHelper.getFullURL(request));
+		if (logger.isInfoEnabled()) {
+			logger.info(FHIRValueSetProviderHelper.getFullURL(request));
+		}
 		if (request.getMethod().equals(RequestMethod.POST.name())) {
 			// HAPI doesn't populate the OperationParam values for POST, we parse the body instead.
 			List<Parameters.ParametersParameterComponent> parsed = fhirContext.newJsonParser().parseResource(Parameters.class, rawBody).getParameter();
-			FHIRHelper.handleTxResources(loadPackageService, parsed);
+			TxResourceContext.set(FHIRHelper.extractTxResources(parsed));
 		}
-		return valueSetService.validateCode(null, url, context, valueSet, valueSetVersion, code, system, systemVersion == null ? systemVersionDeprecated : systemVersion, display, coding, codeableConcept, date, abstractBool,
-				FHIRHelper.getDisplayLanguage(displayLanguage, request.getHeader(ACCEPT_LANGUAGE_HEADER)), inferSystem, activeOnly, versionValueSet, lenientDisplayValidation, valueSetMembershipOnly);
+		// system-version canonical hints (system|version) for resolving versionless includes
+		Set<CanonicalUri> defaultSystemVersions = systemVersionDeprecated != null
+				? Set.of(CanonicalUri.fromString(systemVersionDeprecated)) : null;
+		FHIRCodeValidationRequest codeValidationRequest = new FHIRCodeValidationRequest()
+			.withUrl(url)
+			.withContext(context)
+			.withValueSet(valueSet)
+			.withValueSetVersion(valueSetVersion)
+			.withCode(code)
+			.withSystem(system)
+			.withSystemVersion(systemVersion)
+			.withDefaultSystemVersions(defaultSystemVersions)
+			.withForceSystemVersion(forceSystemVersionStr != null ? CanonicalUri.fromString(forceSystemVersionStr) : null)
+			.withCheckSystemVersion(checkSystemVersionStr != null ? CanonicalUri.fromString(checkSystemVersionStr) : null)
+			.withDisplay(display)
+			.withCoding(coding)
+			.withCodeableConcept(codeableConcept)
+			.withDate(date)
+			.withAbstractBool(abstractBool)
+			.withDisplayLanguage(FHIRHelper.getDisplayLanguage(displayLanguage, request.getHeader(ACCEPT_LANGUAGE_HEADER)))
+			.withInferSystem(inferSystem)
+			.withActiveOnly(activeOnly)
+			.withVersionValueSet(versionValueSet)
+			.withLenientDisplayValidation(lenientDisplayValidation)
+			.withValueSetMembershipOnly(valueSetMembershipOnly);
+		try {
+			return valueSetService.validateCode(codeValidationRequest);
+		} finally {
+			TxResourceContext.clear();
+		}
+	}
+
+	@Operation(name = "$batch-validate-code", idempotent = false)
+	public Parameters batchValidateCode(
+			HttpServletRequest request,
+			HttpServletResponse response,
+			@ResourceParam String rawBody) {
+
+		Parameters inputParams = fhirContext.newJsonParser().parseResource(Parameters.class, rawBody);
+		List<Parameters.ParametersParameterComponent> allParams = inputParams.getParameter();
+		TxResourceContext.set(FHIRHelper.extractTxResources(allParams));
+
+		UriType globalUrl = getBatchParamOfType(allParams, "url", UriType.class);
+		BooleanType globalLenient = getBatchParamOfType(allParams, "lenient-display-validation", BooleanType.class);
+		String displayLanguage = FHIRHelper.getDisplayLanguage(null, request.getHeader(ACCEPT_LANGUAGE_HEADER));
+
+		Parameters result = new Parameters();
+		try {
+			for (Parameters.ParametersParameterComponent param : allParams) {
+				if ("validation".equals(param.getName())) {
+					Resource valResult = processOneValidation((Parameters) param.getResource(), globalUrl, globalLenient, displayLanguage);
+					result.addParameter().setName("validation").setResource(valResult);
+				}
+			}
+		} finally {
+			TxResourceContext.clear();
+		}
+		return result;
+	}
+
+	private Resource processOneValidation(Parameters valParams, UriType url, BooleanType globalLenient, String displayLanguage) {
+		List<Parameters.ParametersParameterComponent> params = valParams.getParameter();
+
+		Coding coding = getBatchParamOfType(params, "coding", Coding.class);
+		CodeableConcept codeableConcept = getBatchParamOfType(params, "codeableConcept", CodeableConcept.class);
+		String code = getBatchStringParam(params, "code");
+		UriType system = getBatchParamOfType(params, "system", UriType.class);
+		String display = getBatchStringParam(params, "display");
+		BooleanType perLenient = getBatchParamOfType(params, "lenient-display-validation", BooleanType.class);
+		BooleanType inferSystem = getBatchParamOfType(params, "inferSystem", BooleanType.class);
+
+		if (coding == null && codeableConcept == null && code == null) {
+			OperationOutcome oo = new OperationOutcome();
+			oo.addIssue()
+				.setSeverity(OperationOutcome.IssueSeverity.ERROR)
+				.setCode(IssueType.INVALID)
+				.setDetails(new CodeableConcept().setText(
+					"Unable to find code to validate (looked for coding | codeableConcept | code+system | code+inferSystem in parameters"));
+			return oo;
+		}
+
+		try {
+			return valueSetService.validateCode(new FHIRCodeValidationRequest()
+				.withUrl(url)
+				.withCoding(coding)
+				.withCodeableConcept(codeableConcept)
+				.withCode(code)
+				.withSystem(system)
+				.withDisplay(display)
+				.withLenientDisplayValidation(perLenient != null ? perLenient : globalLenient)
+				.withInferSystem(inferSystem)
+				.withDisplayLanguage(displayLanguage));
+		} catch (SnowstormFHIRServerResponseException e) {
+			return e.getOperationOutcome();
+		}
+	}
+
+	private <T extends IBase> T getBatchParamOfType(List<Parameters.ParametersParameterComponent> params, String name, Class<T> type) {
+		return params.stream()
+			.filter(p -> name.equals(p.getName()) && type.isInstance(p.getValue()))
+			.map(p -> type.cast(p.getValue()))
+			.findFirst()
+			.orElse(null);
+	}
+
+	private String getBatchStringParam(List<Parameters.ParametersParameterComponent> params, String name) {
+		return params.stream()
+			.filter(p -> name.equals(p.getName()) && p.getValue() instanceof PrimitiveType)
+			.map(p -> ((PrimitiveType<?>) p.getValue()).getValueAsString())
+			.findFirst()
+			.orElse(null);
 	}
 
 	@Override
